--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "dependencies": {
     "async": "^3.2.0",
     "electron": "^11.2.3",
-    "mkdirp": "^1.0.4"
+    "mkdirp": "^1.0.4",
+    "request": "^2.88.2"
   },
   "main": "main.js",
   "devDependencies": {},
